samples/_failures_safe/1761522650_63fd84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3efb8aa4.c: In function ‘main’:
./samples/SAFE/__tmp_3efb8aa4.c:165:27: error: expected ‘)’ at end of input
  165 |         print_token(&token
      |                    ~      ^
      |                           )
./samples/SAFE/__tmp_3efb8aa4.c:165:9: error: expected declaration or statement at end of input
  165 |         print_token(&token
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_3efb8aa4.c:165:9: error: expected declaration or statement at end of input
